kubernetes-gitops/argo-cd/microservices-demo/istio/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "*"
  gateways:
    - frontend-gw
  http:
    - route:
      - destination:
          host: frontend.microservices-demo.svc.cluster.local
          port:
            number: 80
