kubernetes-gitops/argo-cd/microservices-demo/istio/productcatalogservice-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
    - "*"
  gateways:
    - productcatalog-gw
  http:
    - route:
      - destination:
          host: productcatalogservice.microservices-demo.svc.cluster.local
          port:
            number: 3550
